# PyroCommon

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake  README.md
.github/workflows/: cmake-linux-trigger.yml  cmake-linux.yml  cmake-macos.yml  cmake-multi-platform.yml  cmake-windows-msvc.yml  codeql.yml
src/: CMakeLists.txt
src/PyroCommon/: Allocator.hpp  CommandLineParser.cpp  CommandLineParser.hpp  Concepts.hpp  Core.hpp  GUID.cpp  GUID.hpp  GUID.natvis  Logger.hpp  LoggerInterface.hpp  Memory.hpp  MemoryOverload.hpp  Platform.hpp  Traits.hpp  Types.hpp  Version.cpp  Version.hpp  main.cpp
src/PyroCommon/Serialization/: BinarySerializer.cpp  BinarySerializer.hpp  ISerializable.hpp
src/PyroCommon/Stream/: FileStream.cpp  FileStream.hpp  IStreamBase.hpp  IStreamReader.hpp  IStreamWriter.hpp  MemoryStream.cpp  MemoryStream.hpp
src/PyroCommon/Util/: CommandLineParser.cpp  CommandLineParser.hpp  HashCombine.hpp  String.hpp
tests/: CMakeLists.txt  TestBinarySeralizer.cpp  TestCommandLineParser.cpp  TestFlags.cpp  TestGUID.cpp  TestLogger.cpp  TestStringUtils.cpp  TestUnion.cpp  TestVersion.cpp  main.cpp
tests/TestsEditor/: CMakeLists.txt  TestShaderContentAddressCompiler.cpp  TestSlangReflection.cpp
tests/TestsEditor/Fakes/: FakeContentAddressManager.hpp
tests/TestsEditor/Mocks/: MockShaderCompiler.hpp
tests/TestsEditor/Stubs/: SlangFeatureSetStub.hpp
tests/TestsEditor/shaders/: Shaders.hpp
